--- a/notebooks/drh382/dee_KNN.ipynb
+++ b/notebooks/drh382/dee_KNN.ipynb
@@ -885,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#copied from am\n",
+    "#copied from amelia\n",
     "import json\n",
     "base = '../data/processed/dev/'\n",
     "def writeJsonFile(fname, data,  base=base):\n",
@@ -924,6 +924,7 @@
     }
    ],
    "source": [
+    "#copied from amelia\n",
     "knn_model_params = {'neighbor':[], 'train_accuracy':[],'test_accuracy':[],'test_auc':[], 'test_ap':[]}\n",
     "results_path = '../../data/processed/knn_unbalanced_results_drh382.csv'\n",
     "x = pd.read_csv(results_path)\n",
@@ -969,6 +970,251 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, roc_auc_score, average_precision_score\n",
+    "\n",
+    "def ClassifierMetrics (X_train, Y_train, X_test, Y_test, fitted_model):\n",
+    "    \"\"\"\n",
+    "    X_train: training set features\n",
+    "    Y_train: training set labels\n",
+    "    X_test: dev/test set features\n",
+    "    Y_test: dev/test set labels\n",
+    "    fitted_model: \n",
+    "    \"\"\"\n",
+    "#     Y_score = fitted_model.predict_proba(X_test)\n",
+    "    # If your classifier doesn't output decision_function, use predict_proba. \n",
+    "    # Make sure it is taking the prob of the '1' class\n",
+    "    Y_score = fitted_model.predict_proba(X_test)[:,1]\n",
+    "    Y_pred = fitted_model.predict(X_test)\n",
+    "    metrics = {'train_accuracy': fitted_model.score(X_train, Y_train),\n",
+    "               'test_accuracy': fitted_model.score(X_test, Y_test),\n",
+    "               'test_auc_pred': roc_auc_score(Y_test, Y_pred),\n",
+    "               'test_auc_score': roc_auc_score(Y_test, Y_score),\n",
+    "               'test_ap_pred': average_precision_score(Y_test, Y_pred),\n",
+    "               'test_ap_score': average_precision_score(Y_test, Y_score)}\n",
+    "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "base = '../data/processed/dev/'\n",
+    "def writeJsonFile(fname, data,  base=base):\n",
+    "    with open(base + fname +'.json', 'w') as outfile:\n",
+    "        json.dump(data, outfile)\n",
+    "    print('Successfully written to {}'.format(fname))\n",
+    "    \n",
+    "def readJsonFile(fname, base=base):\n",
+    "    with open(base + fname + '.json', 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add more of your fitted models to my_models if there are any\n",
+    "# assuming that the suffix for each model is the n_neighbors  \n",
+    "# and  n_neighbors  is the only parameter you adjusted.\n",
+    "\n",
+    "my_models = [(10, classifier10), (11, classifier11), \n",
+    "(13, classifier13), (14, classifier14), (15, classifier15), (20, classifier20), (5, classifier)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_attempts = []\n",
+    "for (n, fitted_model) in my_models:\n",
+    "    params = {'n_neighbors': n}\n",
+    "    metrics = ClassifierMetrics (cnt_X_train, Y_train, cnt_X_dev, Y_dev, fitted_model)\n",
+    "    model_attempt_details = {'params': params, 'metrics': metrics}\n",
+    "    all_attempts.append(model_attempt_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully written to all_attempts_drh382\n"
+     ]
+    }
+   ],
+   "source": [
+    "# File name of the model attempts/results\n",
+    "base = '/Users/robin/Documents/GitHub/fake-review-detection-project/notebooks/drh382'\n",
+    "fname = 'all_attempts_drh382'\n",
+    "writeJsonFile(fname, all_attempts,base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/robin/Documents/GitHub/fake-review-detection-project/notebooks/drh382\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!PWD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'params': {'n_neighbors': 10},\n",
+       "  'metrics': {'train_accuracy': 0.873087685451661,\n",
+       "   'test_accuracy': 0.8415279247174119,\n",
+       "   'test_auc_pred': 0.511729185694714,\n",
+       "   'test_auc_score': 0.5310443356900929,\n",
+       "   'test_ap_pred': 0.10429276470132186,\n",
+       "   'test_ap_score': 0.11094622963614453}},\n",
+       " {'params': {'n_neighbors': 11},\n",
+       "  'metrics': {'train_accuracy': 0.8520093752242162,\n",
+       "   'test_accuracy': 0.8107355643409989,\n",
+       "   'test_auc_pred': 0.5110040896710323,\n",
+       "   'test_auc_score': 0.5303059115386078,\n",
+       "   'test_ap_pred': 0.10391791154049448,\n",
+       "   'test_ap_score': 0.11035856176038553}},\n",
+       " {'params': {'n_neighbors': 13},\n",
+       "  'metrics': {'train_accuracy': 0.8543810837312754,\n",
+       "   'test_accuracy': 0.8203964586001448,\n",
+       "   'test_auc_pred': 0.5106669449518589,\n",
+       "   'test_auc_score': 0.5321886561237693,\n",
+       "   'test_ap_pred': 0.10387427935448956,\n",
+       "   'test_ap_score': 0.11096606083238872}},\n",
+       " {'params': {'n_neighbors': 14},\n",
+       "  'metrics': {'train_accuracy': 0.8718958521010547,\n",
+       "   'test_accuracy': 0.8494626649590734,\n",
+       "   'test_auc_pred': 0.509094157913765,\n",
+       "   'test_auc_score': 0.5305561303611523,\n",
+       "   'test_ap_pred': 0.10363763504514066,\n",
+       "   'test_ap_score': 0.11034996607735038}},\n",
+       " {'params': {'n_neighbors': 15},\n",
+       "  'metrics': {'train_accuracy': 0.8562545341486164,\n",
+       "   'test_accuracy': 0.8282476752603152,\n",
+       "   'test_auc_pred': 0.5098089414153606,\n",
+       "   'test_auc_score': 0.5308391938020214,\n",
+       "   'test_ap_pred': 0.10369562558104857,\n",
+       "   'test_ap_score': 0.11053444304133936}},\n",
+       " {'params': {'n_neighbors': 20},\n",
+       "  'metrics': {'train_accuracy': 0.8732630722992418,\n",
+       "   'test_accuracy': 0.858037752658834,\n",
+       "   'test_auc_pred': 0.505478259776339,\n",
+       "   'test_auc_score': 0.5333016482366436,\n",
+       "   'test_ap_pred': 0.10274942473584053,\n",
+       "   'test_ap_score': 0.11007725822596078}},\n",
+       " {'params': {'n_neighbors': 5},\n",
+       "  'metrics': {'train_accuracy': 0.8522286087836922,\n",
+       "   'test_accuracy': 0.7633776936355031,\n",
+       "   'test_auc_pred': 0.5149185582584443,\n",
+       "   'test_auc_score': 0.5241492296698905,\n",
+       "   'test_ap_pred': 0.10470122635315257,\n",
+       "   'test_ap_score': 0.10815341284068077}}]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_attempts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<250874x108112 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 11561799 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<250874x108112 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 11561799 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<250874x108112 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 11561799 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_X_train"
+   ]
   },
   {
    "cell_type": "code",
