--- a/notebooks/drh382/knn-eval.ipynb
+++ b/notebooks/drh382/knn-eval.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score, roc_auc_score, average_precision_score\n",
@@ -33,14 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "# base = '../data/processed/dev/'\n",
+    "base = '../data/processed/dev/'\n",
     "def writeJsonFile(fname, data,  base=base):\n",
     "    with open(base + fname +'.json', 'w') as outfile:\n",
     "        json.dump(data, outfile)\n",
@@ -54,11 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'classifier10' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-340606179d2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# and  n_neighbors  is the only parameter you adjusted.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m my_models = [(10, classifier10), (11, classifier11), \n\u001b[0m\u001b[1;32m      6\u001b[0m (13, classifier13), (14, classifier14)]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'classifier10' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Add more of your fitted models to my_models if there are any\n",
     "# assuming that the suffix for each model is the n_neighbors  \n",
@@ -114,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
