test gradescope upload

--- a/notebooks/ac4119/03c-text-and-behavioral-features-pipeline.ipynb
+++ b/notebooks/ac4119/03c-text-and-behavioral-features-pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -153,8 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Rationale: \n",
@@ -170,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +329,348 @@
    ],
    "source": [
     "metrics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_fname = '../../data/processed/dev/ac4119_test_set_w_tokens.csv'\n",
+    "test = pd.read_csv(test_fname)\n",
+    "test_num_reviews_by_prod = num_reviews_by_prod[['prod_id','cumulative_total_train_dev_test_reviews']]\n",
+    "test_num_reviews_by_prod.columns = ['prod_id','num_prod_reviews']\n",
+    "\n",
+    "test_num_reviews_by_user = num_reviews_by_user[['user_id','cumulative_total_train_dev_test_reviews']]\n",
+    "test_num_reviews_by_user.columns = ['user_id','num_user_reviews']\n",
+    "\n",
+    "test = pd.merge(test, test_num_reviews_by_user , on='user_id', how='left')\n",
+    "test = pd.merge(test, test_num_reviews_by_prod , on='prod_id', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['token_review'] = test['token_review'].apply(lambda x: literal_eval(x))\n",
+    "\n",
+    "feature_cols = ['rating', 'token_review', 'num_user_reviews', 'num_prod_reviews']\n",
+    "X_test = test[feature_cols].fillna(0)\n",
+    "\n",
+    "Y_test = test['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred = fitted_model.predict(X_test)\n",
+    "Y_score = fitted_model.decision_function(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46474"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Y_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['Y_score'] = Y_score "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ex_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>prod_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>label</th>\n",
+       "      <th>date</th>\n",
+       "      <th>review</th>\n",
+       "      <th>token_review</th>\n",
+       "      <th>num_user_reviews</th>\n",
+       "      <th>num_prod_reviews</th>\n",
+       "      <th>Y_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>929</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-08-25</td>\n",
+       "      <td>Let me start with a shout-out to everyone who ...</td>\n",
+       "      <td>[let, start, shout, boosting, mint, lemonade, ...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>-0.153497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>932</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-05-09</td>\n",
+       "      <td>Stopped in for lunch today and couldn't believ...</td>\n",
+       "      <td>[stopped, lunch, today, believe, boyfriend, sh...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>-0.195586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "      <td>937</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-10-15</td>\n",
+       "      <td>Tiny little place, but very good food. Pastits...</td>\n",
+       "      <td>[tiny, pastitsio, especially]</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>0.396291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>945</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-04-10</td>\n",
+       "      <td>Food was delicious and service was great. Good...</td>\n",
+       "      <td>[atmosphere, quick, bite, catch]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>0.686363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23</td>\n",
+       "      <td>946</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-03-29</td>\n",
+       "      <td>Awesome hole in the wall place to grab a quick...</td>\n",
+       "      <td>[awesome, hole, wall, grab, quick, bite, music...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>-0.261937</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ex_id  user_id  prod_id  rating  label        date  \\\n",
+       "0      6      929        0     4.0    NaN  2009-08-25   \n",
+       "1      9      932        0     5.0    NaN  2014-05-09   \n",
+       "2     14      937        0     4.0    NaN  2014-10-15   \n",
+       "3     22      945        0     5.0    NaN  2014-04-10   \n",
+       "4     23      946        0     5.0    NaN  2014-03-29   \n",
+       "\n",
+       "                                              review  \\\n",
+       "0  Let me start with a shout-out to everyone who ...   \n",
+       "1  Stopped in for lunch today and couldn't believ...   \n",
+       "2  Tiny little place, but very good food. Pastits...   \n",
+       "3  Food was delicious and service was great. Good...   \n",
+       "4  Awesome hole in the wall place to grab a quick...   \n",
+       "\n",
+       "                                        token_review  num_user_reviews  \\\n",
+       "0  [let, start, shout, boosting, mint, lemonade, ...               1.0   \n",
+       "1  [stopped, lunch, today, believe, boyfriend, sh...               1.0   \n",
+       "2                      [tiny, pastitsio, especially]               2.0   \n",
+       "3                   [atmosphere, quick, bite, catch]               1.0   \n",
+       "4  [awesome, hole, wall, grab, quick, bite, music...               3.0   \n",
+       "\n",
+       "   num_prod_reviews   Y_score  \n",
+       "0             210.0 -0.153497  \n",
+       "1             210.0 -0.195586  \n",
+       "2             210.0  0.396291  \n",
+       "3             210.0  0.686363  \n",
+       "4             210.0 -0.261937  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = test[['ex_id', 'Y_score']].sort_values(by='ex_id', ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ex_id</th>\n",
+       "      <th>Y_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-0.153497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.195586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.396291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.686363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23</td>\n",
+       "      <td>-0.261937</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ex_id   Y_score\n",
+       "0      6 -0.153497\n",
+       "1      9 -0.195586\n",
+       "2     14  0.396291\n",
+       "3     22  0.686363\n",
+       "4     23 -0.261937"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/notebooks/ac4119\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fname = '/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/predictions.csv'\n",
+    "predictions['Y_score'].to_csv(fname, header=False, index=False)"
    ]
   },
   {
