another knn json attempt

--- a/notebooks/drh382/dee_KNN.ipynb
+++ b/notebooks/drh382/dee_KNN.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1063,10 +1063,170 @@
    ],
    "source": [
     "# File name of the model attempts/results\n",
-    "base = '/Users/robin/Documents/GitHub/fake-review-detection-project/notebooks/drh382'\n",
+    "base = '/Users/robin/Documents/GitHub/fake-review-detection-project/data/processed/dev/'\n",
     "fname = 'all_attempts_drh382'\n",
     "writeJsonFile(fname, all_attempts,base)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=50, p=2,\n",
+       "                     weights='uniform')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier30 = KNeighborsClassifier(n_neighbors=30)\n",
+    "classifier30.fit(cnt_X_train, Y_train)\n",
+    "classifier50 = KNeighborsClassifier(n_neighbors=50)\n",
+    "classifier50.fit(cnt_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_try = [(5, smoteKNN5)]\n",
+    "second_attempts = []\n",
+    "for (n, fitted_model) in second_try:\n",
+    "    params = {'n_neighbors': n}\n",
+    "    metrics = ClassifierMetrics (cnt_X_train, Y_train, cnt_X_dev, Y_dev, fitted_model)\n",
+    "    model_attempt_details = {'params': params, 'metrics': metrics}\n",
+    "    all_attempts.append(model_attempt_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+       "                     weights='uniform')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "ros = SMOTE(random_state=0)\n",
+    "ros_train, ros_y = ros.fit_resample(cnt_X_train, Y_train)\n",
+    "smoteKNN5 = KNeighborsClassifier(n_neighbors=5)\n",
+    "smoteKNN5.fit(cnt_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "smote_try = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'params': {'n_neighbors': 10},\n",
+       "  'metrics': {'train_accuracy': 0.873087685451661,\n",
+       "   'test_accuracy': 0.8415279247174119,\n",
+       "   'test_auc_pred': 0.511729185694714,\n",
+       "   'test_auc_score': 0.5310443356900929,\n",
+       "   'test_ap_pred': 0.10429276470132186,\n",
+       "   'test_ap_score': 0.11094622963614453}},\n",
+       " {'params': {'n_neighbors': 11},\n",
+       "  'metrics': {'train_accuracy': 0.8520093752242162,\n",
+       "   'test_accuracy': 0.8107355643409989,\n",
+       "   'test_auc_pred': 0.5110040896710323,\n",
+       "   'test_auc_score': 0.5303059115386078,\n",
+       "   'test_ap_pred': 0.10391791154049448,\n",
+       "   'test_ap_score': 0.11035856176038553}},\n",
+       " {'params': {'n_neighbors': 13},\n",
+       "  'metrics': {'train_accuracy': 0.8543810837312754,\n",
+       "   'test_accuracy': 0.8203964586001448,\n",
+       "   'test_auc_pred': 0.5106669449518589,\n",
+       "   'test_auc_score': 0.5321886561237693,\n",
+       "   'test_ap_pred': 0.10387427935448956,\n",
+       "   'test_ap_score': 0.11096606083238872}},\n",
+       " {'params': {'n_neighbors': 14},\n",
+       "  'metrics': {'train_accuracy': 0.8718958521010547,\n",
+       "   'test_accuracy': 0.8494626649590734,\n",
+       "   'test_auc_pred': 0.509094157913765,\n",
+       "   'test_auc_score': 0.5305561303611523,\n",
+       "   'test_ap_pred': 0.10363763504514066,\n",
+       "   'test_ap_score': 0.11034996607735038}},\n",
+       " {'params': {'n_neighbors': 15},\n",
+       "  'metrics': {'train_accuracy': 0.8562545341486164,\n",
+       "   'test_accuracy': 0.8282476752603152,\n",
+       "   'test_auc_pred': 0.5098089414153606,\n",
+       "   'test_auc_score': 0.5308391938020214,\n",
+       "   'test_ap_pred': 0.10369562558104857,\n",
+       "   'test_ap_score': 0.11053444304133936}},\n",
+       " {'params': {'n_neighbors': 20},\n",
+       "  'metrics': {'train_accuracy': 0.8732630722992418,\n",
+       "   'test_accuracy': 0.858037752658834,\n",
+       "   'test_auc_pred': 0.505478259776339,\n",
+       "   'test_auc_score': 0.5333016482366436,\n",
+       "   'test_ap_pred': 0.10274942473584053,\n",
+       "   'test_ap_score': 0.11007725822596078}},\n",
+       " {'params': {'n_neighbors': 5},\n",
+       "  'metrics': {'train_accuracy': 0.8522286087836922,\n",
+       "   'test_accuracy': 0.7633776936355031,\n",
+       "   'test_auc_pred': 0.5149185582584443,\n",
+       "   'test_auc_score': 0.5241492296698905,\n",
+       "   'test_ap_pred': 0.10470122635315257,\n",
+       "   'test_ap_score': 0.10815341284068077}}]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backup_attempts = all_attempts\n",
+    "backup_attempts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
